# libstrophe

./: CMakeLists.txt  strophe.h
src/: common.h  conn.c  parser.h  parser_expat.c  sha.h  snprintf.c
